@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class Job {
    -String name

    +Job(name)
    -validateJob(job)
}

class RegisterJobController {

    +RegisterJobController()
    +registerJob(name)
}

class RegisterJobUI {
}

class Collaborator {
    -String name
    -List<Skill> skillList
    -Job job
    -Date dateOfBirth
    -Date admissionDate
    -Address address
    -Document document
    -String phoneNumber
    -String email
    -int cc
    -int taxpayer

    + Collaborator(name, dateOfBirth, admissionDate, address,document, phoneNumber, email, cc, taxpayer)
}

class HumanResourcesManager {
}

class Repositories {

    -Repositories()
    +getInstance() : Repositories
    +getJobRepository()
}

class JobRepository {
    -List<Job> job

    -addJob(job)
    -validateJob(job)
    +createJob(name)
}

RegisterJobController .> Repositories : repositories
RegisterJobController ..> "1" Job
RegisterJobController ..> "1" JobRepository

RegisterJobUI .> RegisterJobController

Repositories -> Repositories : instance
Repositories --> "1" JobRepository : jobRepository

JobRepository --> "*" Job : job

Collaborator  <|--  HumanResourcesManager
Collaborator "1..*" --> "1" Job : jobs

HumanResourcesManager <--  Job: createdBy

@enduml